# benchmarks

./: .gitignore  CONTRIBUTING.md  README.md  go.sh
benchmark/common/: cds.proto  common.h  common.rs
benchmark/h2o2_oram/: build.sh  run.sh  setup.sh
benchmark/h2o2_oram/benchmark_code/: benchmark_omap16.cpp  benchmark_omap64.cpp  benchmark_oram16_initialization.cpp  benchmark_oram48.cpp  benchmark_oram64.cpp  benchmark_oram64_initialization.cpp  omap_exp_script.py  oram_exp_script.py  utils.py
benchmark/h2o2_oram/cached_optimizations/: hash_map.bin16  hash_map.bin48  hash_map.bin64  hash_time.bin16  hash_time.bin48  hash_time.bin64
benchmark/mc_oblivious/: build.sh  run.sh  setup.sh
benchmark/mc_oblivious/benchmark_code/: Cargo.toml
benchmark/mc_oblivious/benchmark_code/src/: lib.rs  main.rs
benchmark/meta_oram/: build.sh  run.sh  setup.sh
benchmark/meta_oram/benchmark_code/: Cargo.toml
benchmark/meta_oram/benchmark_code/src/: lib.rs  main.rs
benchmark/olabs_oram/: build.sh  run.sh  setup.sh
benchmark/olabs_oram/benchmark_code/benchmarks/: CMakeLists.txt
benchmark/olabs_oram/benchmark_code/benchmarks/benchmark/: common.h  load_balancing.cpp  oram_bench.cpp  rw_signal.cpp  umap.cpp  umap_sharded.cpp
benchmark/olabs_rods/: run.sh  setup.sh
benchmark/olabs_rods/benchmark_code/: Cargo.toml
benchmark/olabs_rods/benchmark_code/src/: common.rs  lib.rs  main.rs
benchmark/olabs_rostl/: build.sh  run.sh  setup.sh
benchmark/olabs_rostl/benchmark_code/: Cargo.toml
benchmark/olabs_rostl/benchmark_code/.cargo/: config.toml
benchmark/olabs_rostl/benchmark_code/src/: lib.rs  main.rs
benchmark/signal_icelake/: README.md  build.sh  run.sh  setup.sh
benchmark/signal_icelake/benchmark_code/benchmarks/tests/: common.h  loaded_sharded_table.c  loaded_table.c  path_oram.c
scripts/: analyze_scaling.py  augment.py  config_arch.sh  config_ubuntu.sh  draw.sh  draw_figure.py  draw_figures.py  draw_table.py  gen_args.sh  generate_readme_bodies.py  generate_readme_body.sh  parse.py  parse_util.py  plot_config.py  reset.sh  setup.sh  utils.py
